# zerotier-esp32

./: .clangd  .gitignore  CLAUDE.md  CLAUDE.md.old  CMakeLists.txt  Dockerfile.dev  LATEST_SESSION.md  README.md  ZeroTierOne_VERSION.txt  docker-compose.yml  docker-compose.yml-  fix_stubs.py  metrics_usage.txt  patch_mutex.py  sdkconfig.defaults  sdkconfig.old
ZeroTierOne/include/: ZeroTierOne.h
ZeroTierOne/node/: Constants.hpp  ECC.cpp  Identity.cpp  Identity.hpp  IncomingPacket.cpp  Mutex.hpp  Network.cpp  NetworkConfig.hpp  Node.cpp  Node.hpp  Switch.cpp  Utils.cpp
components/zerotier_node/: CMakeLists.txt  zerotier_spiram.lf
components/zerotier_node/include/: ZeroTierNode.hpp
components/zerotier_node/port/: zt_bond_esp.cpp  zt_metrics_esp.cpp  zt_mutex.cpp  zt_osutils_esp.cpp  zt_socket_esp.cpp  zt_storage_esp.cpp  zt_tap_esp.cpp  zt_trace_esp.cpp  zt_utils_esp.cpp
components/zerotier_node/port/stubs/: ifaddrs.h
components/zerotier_node/port/stubs/nlohmann/: json.hpp
components/zerotier_node/port/stubs/prometheus/: counter.h  histogram.h  simpleapi.h
components/zerotier_node/port/stubs/sys/: un.h
main/: CMakeLists.txt  main.cpp
qemu/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
qemu-wrapper/: CMakeLists.txt  sdkconfig.defaults  sdkconfig_reference  watch.gdb
qemu-wrapper/main/: CMakeLists.txt  main.cpp
qemu/components/qemu_overrides/: CMakeLists.txt
qemu/main/: CMakeLists.txt
